--- a/package.json
+++ b/package.json
@@ -9,22 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^52.0.16",
-    "expo-constants": "~17.0.2",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.2",
-    "expo-splash-screen": "~0.29.7",
-    "expo-status-bar": "~2.0.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@stripe/stripe-react-native": "^0.41.0",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "component": "^1.1.0",
+    "cors": "^2.8.5",
+    "expo": "^52.0.33",
+    "expo-camera": "~16.0.16",
+    "expo-constants": "~17.0.5",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.6",
+    "expo-notifications": "~0.29.13",
+    "expo-router": "^4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "express": "^4.21.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
+    "stripe": "^17.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@supabase/supabase-js": "^2.48.1",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
+    "@types/ws": "^8.5.14",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo-doctor": "^1.12.6",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
