--- a/app.json
+++ b/app.json
@@ -5,6 +5,10 @@
       "expo-router"
     ],
     "name": "myApp",
-    "slug": "myApp"
+    "slug": "myApp",
+    "extra": {
+      "SUPABASE_URL": "https://your_supabase_url",
+      "SUPABASE_ANON_KEY": "your_supabase_anon_key"
+    }
   }
 }
