--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@stripe/stripe-react-native": "^0.41.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "component": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "expo": "^52.0.33",
+    "expo": "^52.0.35",
     "expo-camera": "~16.0.16",
     "expo-constants": "~17.0.5",
     "expo-image-picker": "~16.0.6",
@@ -30,10 +31,12 @@
     "express": "^4.21.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.77.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
